unpackaged/main/default/objects/Markup_Band__mdt/Markup_Band__mdt.object-meta.xml
<CustomObject>
    <description>To be used only to calculate the markup against Products Requireds</description>
    <label>Markup Band</label>
    <pluralLabel>Markup Bands</pluralLabel>
</CustomObject>