unpackaged/main/default/objects/Markup_Band__mdt/fields/From_Band__c.field-meta.xml
<CustomField>
    <fullName>From_Band__c</fullName>
    <label>From Band</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>