unpackaged/main/default/objects/Markup_Band__mdt/fields/Markup__c.field-meta.xml
<CustomField>
    <fullName>Markup__c</fullName>
    <label>Markup %</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>