unpackaged/main/default/objects/Markup_Band__mdt/fields/To_Band__c.field-meta.xml
<CustomField>
    <fullName>To_Band__c</fullName>
    <label>To Band</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>